--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,18 +1,91 @@
-#menubar_div {
-   border: 2px solid black;
-   padding: 12px 4px;
+:root {
+   --vertical-space: 2rem;
+   --horizontal-space: 3rem;
 }
 
-.menubar {
-   display: inline;
-   border: 1px black solid;
-   padding: 10px;
+body {
+   font-size: 18px;
+   line-height: 1.5;
+   display: grid;
+   grid-template-areas: "head head"
+                        "nav  nav "
+                        "main main"
+                        "foot foot";
+   grid-template-columns: 1fr 4fr;
+   grid-template-rows: auto auto 1fr auto;
 }
 
-#banner {
-   height: 160px;
-   background-color: #800000;
-   color: white;
-   text-align: center;
-   font-size: 4em;
+@media screen and (min-width: 24em) {
+   body {
+      grid-template-areas: "head head"
+                           "nav  main"
+                           "foot foot";
+      grid-template-rows: auto 1fr auto;
+   }
+}
+
+body > * {
+   padding-left: var(--horizontal-space);
+   padding-right: var(--horizontal-space);
+}
+
+header, footer {
+   padding-top: var(--vertical-space);
+   padding-bottom: var(--vertical-space);
+}
+
+header {
+   grid-area: head;
+}
+
+nav {
+   grid-area: nav;
+}
+
+nav ul {
+   list-style-type: none;
+   padding: 0;
+}
+
+main {
+   grid-area: main;
+}
+
+footer {
+   grid-area: foot;
+}
+
+header h1, footer h1 {
+   margin: 0;
+}
+
+h1, h2, h3 {
+   line-height: 1.2;
+}
+
+body#about img {
+   height: 15em;
+}
+
+body#portfolio ul#portfolioItems {
+   display: flex;
+   flex-wrap: wrap;
+   flex: 1;
+   list-style-type: none;
+   padding: 0;
+}
+
+@media screen and (min-width: 25em) {
+   body#portfolio ul#portfolioItems li {
+      flex-basis: 48%;
+      padding-right: 2%l
+   }
+}
+
+body#portfolio ul#portfolioItems li img {
+   max-width: 100%;
+}
+
+p {
+   max-width: 50em;
 }
